examples/test/testpolicy14376.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14376
  namespace: namespace492
spec:
  podSelector:
    matchLabels:
      key18: value46
      key29: value18
      key21: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value4
          key37: value41
          key2: value5
      podSelector:
        matchLabels:
          key43: value21
